--- a/html/templates/user_reset_password.html
+++ b/html/templates/user_reset_password.html
@@ -42,15 +42,10 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
-                {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
-                    <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-en-old.png" /><span>By <strong>VOIRedirect</strong></span>
-                    </a>
-                {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
-                    <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-lots.png" />
-                    </a>
-                {% endif %}
+                <a href="/" class="navbar-brand page-scroll">
+                    <span class="logo-services fr">VOI </span><br>
+                    <span class="logo-services">Services</span>
+                </a>
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
