--- a/html/templates/includes/layout-footer.html
+++ b/html/templates/includes/layout-footer.html
@@ -62,7 +62,7 @@
 
                 {% block logo %}
                     <a href="/" class="navbar-brand page-scroll">
-                        <img class="logo-fba" src="/static/img/logo-en-old.png" />
+                        <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
                     </a>
                 {% endblock %}
 
