--- a/html/templates/invoice.html
+++ b/html/templates/invoice.html
@@ -51,7 +51,10 @@
 
 <div class="content-invoice">
     <div class="top-invoice">
-        <img src="/static/img/default-voi.png" class="logo-invoice" />
+        <a href="/" class="navbar-brand page-scroll">
+            <span class="logo-services fr">VOI </span><br>
+            <span class="logo-services">Services</span>
+        </a>
         <ul class="order-details dados">
             <li>https://lots.voiservices.com</li>
             <li>(978) 992-8417</li>
