--- a/html/templates/login.html
+++ b/html/templates/login.html
@@ -39,11 +39,9 @@
 
 <body id="page-top" class="login">
     <div id="login-box">
-            {% if request.CURRENT_DOMAIN == 'fbaprepmaster.com' %}
-                <div class="contem-logo"><img src="/static/img/logo-fba-new.png" width="176"/><span>By <strong>VOIRedirect</strong></span></div>
-            {% elif request.CURRENT_DOMAIN == 'lots.voiservices.com' %}
-                <img class="logo-lots lots-login" src="/static/img/logo-lots.png" />
-            {% endif %}
+            <a href="/" class="navbar-brand page-scroll">
+                <span class="logo-services fr">VOI </span><span class="logo-services">SERVICES</span>
+            </a>
             <p class="left">{% trans "Digite abaixo seus dados de acesso" %}</p>
             <form action="" method="post" id="form-login">
               {% csrf_token %}
