--- a/html/templates/subscriber_return.html
+++ b/html/templates/subscriber_return.html
@@ -40,7 +40,8 @@
                     <span class="sr-only">Toggle navigation</span> {% trans "Menu" %} <i class="fa fa-bars"></i>
                 </button>
                 <a href="/" class="navbar-brand page-scroll">
-                    <img class="logo-fba" src="/static/img/logo-lots.png" />
+                    <span class="logo-services fr">VOI </span><br>
+                    <span class="logo-services">Services</span>
                 </a>
 
             </div>
