--- a/html/static/css/style.css
+++ b/html/static/css/style.css
@@ -2559,6 +2559,7 @@ ul.listaancora li a{
     background-clip: border-box;
     border: 1px solid rgba(0,0,0,.125);
     border-radius: .25rem;
+    z-index: 1;
 }
 
 .card-img-top {
